Bug 164266 - FILEOPEN RTF Automatic padding in table is 0.19 cm instead of 0
Summary: FILEOPEN RTF Automatic padding in table is 0.19 cm instead of 0
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.2
Keywords: bibisected, bisected, filter:rtf
Depends on:
Blocks: RTF-Tables
  Show dependency treegraph
 
Reported: 2024-12-10 12:00 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-12 17:20 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
The example file in Word 2016 and in Writer master (89.71 KB, image/png)
2024-12-10 12:00 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-12-10 12:00:53 UTC
Created attachment 198042 [details]
The example file in Word 2016 and in Writer master

This is split out from bug 162198

When the attachment 195510 [details] is opened in Writer, the right cell "yyy" has 0.19 cm left and right padding instead of 0.

1. Open attachment 195510 [details] 
-> right cell in the table has too large left and right padding

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a366cd34a85a21210939482d229d6d2dd9c1087c
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

This seems to have started in 5.2 for the right cell with:

https://git.libreoffice.org/core/+/47a218c3f9d8f12dab9813abc820d54f1e77b6f8

author	Miklos Vajna <vmiklos@collabora.co.uk>	Tue Jun 07 09:25:16 2016 +0200
committer	Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>	Tue Jun 07 17:51:55 2016 +0000

tdf#50821 RTF import: fix handling of \trpaddf{b,l,r,t}
Comment 1 Commit Notification 2025-02-11 20:26:42 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0e0ae62ded3f72768bc06e38253dacbf5af0ed5a

tdf#164266 RTF: border distance in style is not applied to table

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2025-02-12 17:20:03 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/70e5461a866f14c198cbb4894fa81c465f4269ae

tdf#164266 RTF: border distance in style is not applied to table

It will be available in 25.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.