tdf#164266 RTF: border distance in style is not applied to table

Attributes from styles are only valid if they are repeated at the
location where the style is applied.

Change-Id: I0083b833266346084d51aaf78a162b96012a0dab
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180835
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
(cherry picked from commit 0e0ae62ded3f72768bc06e38253dacbf5af0ed5a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181459